--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "mlflow>=3.1.1",
     "pydantic>=2.11.7",
     "toml>=0.10.2",
-    "h5netcdf>=1.6.4",
+    "netcdf4>=1.7.2",
 ]
 
 [project.optional-dependencies]
