MRB-457 Refactor verification output to use NetCDF (#43)
* Use netcdf

* aggregate on NetCDF files

* add spatial scores

* add square-root transformation of VAR and MSE

* address diversity in forecast formats and refactor

* skip missing values

* use aggregated netcdf files

* formatting

* fix linting errors

* Fix issue with merge

* Aggregation with grouping by season

* add flox for grouping operations

* remove redundant valid_time coordinate

* remove spatial, stricted combines

* keep singleton ref_time dimension

* open_mfdataset in parallel (had to use h5netcdf engine)

* Configurable baselines and analyses

* more consistent naming

* multiple baselines in rules

* formatting

* remove valid_every

* fix multiple baselines

* add steps to config

* fix labelling of experiment participants

* Grouping by init_hour and season as discussed

* labels need to be unique too

* join outer to allow for subsetted lead_times

* Add steps for interpolator

* drop missing values

* fix dashboard

* fix config for forecasters

* exclude none (originating from pydantic schema)

* formatting

* trailing whitespace

* remove evaluation and experiment report

* pre-commit hooks run

* reduce size of default config

* remove todo

* fixed size of subplots in dashboard

* Silence FutureWarnings by setting compat='no_conflicts' explicitely

* Switch to netcdf4 backend and set parallel=False for stability

* Inherit rule for clearer syntax

* Submit verif rules to SLURM instead of runinng them locally

* Silence FutureWarnings by setting join='outer' explicitely

* Increase timeout

* Increase timeout

---------

Co-authored-by: Francesco Zanetta <francesco.zanetta@meteoswiss.ch>
Co-authored-by: Daniele Nerini <daniele.nerini@meteoswiss.ch>

--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -4,8 +4,8 @@ description: |
 
 dates:
   start: 2020-01-01T12:00
-  end: 2020-01-10T00:00
-  frequency: 54h
+  end: 2020-01-06T12:00
+  frequency: 36h
 
 lead_time: 120h
 
@@ -13,6 +13,7 @@ runs:
   - interpolator:
       run_id: 9c18b90074214d769b8b383722fc5a06
       label: LAM Interpolator (M-1 forecaster)
+      steps: 0/121/1
       forecaster:
         run_id: d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/forecaster_with_global.yaml
@@ -24,6 +25,7 @@ runs:
   - interpolator:
       run_id: 07c3d9698db14d859b78bb712a65bbbf
       label: SGM Interpolator (M-1 forecaster)
+      steps: 0/121/1
       config: resources/inference/configs/interpolator_stretched.yaml
       forecaster:
         run_id: d0846032fc7248a58b089cbe8fa4c511
@@ -34,7 +36,16 @@ runs:
          - torch-geometric==2.6.1
          - anemoi-graphs==0.5.2
 
-baseline: COSMO-E
+baselines:
+  - baseline:
+      baseline_id: COSMO-E-1h
+      label: COSMO-E
+      root: /scratch/mch/bhendj/COSMO-E
+      steps: 0/121/1
+
+analysis:
+  label: COSMO KENDA
+  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-1h-v3-pl13.zarr
 
 locations:
   output_root: output/
@@ -42,9 +53,6 @@ locations:
     # - https://service.meteoswiss.ch/mlstore
     - https://servicedepl.meteoswiss.ch/mlstore
     - https://mlflow.ecmwf.int
-
-verification:
-  valid_every: 12
 
 profile:
   executor: slurm
