--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "snakemake<9.10",  # https://github.com/snakemake/snakemake/issues/3289
+    "snakemake<9.10", # https://github.com/snakemake/snakemake/issues/3289
     "snakemake-executor-plugin-slurm",
     "click",
     "meteodata-lab>=0.4.0",
@@ -17,6 +17,7 @@ dependencies = [
     "mlflow>=3.1.1",
     "pydantic>=2.11.7",
     "toml>=0.10.2",
+    "netcdf4>=1.7.2",
 ]
 
 [project.optional-dependencies]
