Make interpolator inference run with forecaster null

--- a/resources/inference/configs/interpolator_from_files.yaml
+++ b/resources/inference/configs/interpolator_from_files.yaml
@@ -4,6 +4,10 @@ include_forcings: true
 input:
   test:
     use_original_paths: true
+  
+post_processors:
+  - assign_mask:
+      mask: "trimedge_mask"
 
 output:
   grib:
