--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -11,6 +11,16 @@ lead_time: 120h
 
 runs:
   - interpolator:
+        run_id: 9c18b90074214d769b8b383722fc5a06
+        label: LAM Interpolator (COSMO-E analysis) 
+        steps: 0/121/1
+        config: resources/inference/configs/interpolator_from_files.yaml
+        forecaster: null
+        extra_dependencies:
+          - git+https://github.com/MeteoSwiss/anemoi-inference@fix/interp_files
+          - torch-geometric==2.6.1
+          - anemoi-graphs==0.5.2
+  - interpolator:
       run_id: 9c18b90074214d769b8b383722fc5a06
       label: LAM Interpolator (M-1 forecaster)
       steps: 0/121/1
@@ -19,7 +29,6 @@ runs:
         config: resources/inference/configs/forecaster_with_global.yaml
       extra_dependencies:
          - git+https://github.com/MeteoSwiss/anemoi-inference@fix/interp_files
-        #  - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
          - torch-geometric==2.6.1
          - anemoi-graphs==0.5.2
   - interpolator:
@@ -32,7 +41,6 @@ runs:
         config: resources/inference/configs/forecaster_with_global.yaml
       extra_dependencies:
          - git+https://github.com/MeteoSwiss/anemoi-inference@fix/interp_files
-        #  - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
          - torch-geometric==2.6.1
          - anemoi-graphs==0.5.2
 
