--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "toml>=0.10.2",
     "netcdf4>=1.7.2",
+    "cartopy"
 ]
 
 [project.optional-dependencies]
