--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "netcdf4>=1.7.2",
     "cartopy",
     "earthkit-plots",
+    "marimo>=0.16.5",
 ]
 
 [project.optional-dependencies]
