--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -4,17 +4,20 @@ description: |
   (KENDA-1) at 1km resolution.
 
 dates:
-  start: 2022-01-01T12:00
-  end: 2022-01-10T00:00
+  start: 2020-01-01T12:00
+  end: 2020-01-10T00:00
   frequency: 54h
 
 lead_time: 120h
 
 runs:
   - forecaster:
-      mlflow_id: d4fd4abc832542d6bb7b21c2a0f7e084
-      label: Cerra finetuning with N320+COSMO-1E
-      config: resources/inference/configs/forecaster_no_trimedge.yaml
+      mlflow_id: 2174c939c8844555a52843b71219d425
+      label: Cosmo 1km + era5 N320, finetuned on cerra checkpoint, lam resolution 11
+      config: resources/inference/configs/forecaster_no_trimedge_fromtraining.yaml
+      inference_resources:
+        gpu: 4
+        tasks: 4
 
 baselines:
   - baseline:
