--- a/config/showcase.yaml
+++ b/config/showcase.yaml
@@ -3,12 +3,11 @@ description: |
   Basic config for showcasing M-1 forecaster.
 
 dates:
-  start: 2020-01-01T12:00
-  end: 2020-01-01T12:00
-  # end: 2020-03-30T00:00
-  frequency: 12h
+  - 2020-02-03T00:00 # Storm Petra
+  - 2020-02-07T00:00 # Storm Sabine
+  - 2020-10-01T00:00 # Storm Brigitte
 
-lead_time: 24h
+lead_time: 72h
 
 runs:
   - forecaster:
