--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,9 @@ dev = [
 markers = [
     "longtest: mark tests that take a long time to run, e.g. integration tests",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = [
+  "src/evalml",
+  "src/verification"
+]
