--- a/config/forecasters.yaml
+++ b/config/forecasters.yaml
@@ -5,18 +5,15 @@ description: |
 dates:
   start: 2020-01-01T12:00
   end: 2020-01-10T00:00
-  # end: 2020-03-30T00:00
   frequency: 36h
 
 lead_time: 120h
 
 runs:
   - forecaster:
-      mlflow_id: 2f962c89ff644ca7940072fa9cd088ec
-      label: Stage D - N320 global grid with CERRA finetuning
-  - forecaster:
       mlflow_id: d0846032fc7248a58b089cbe8fa4c511
       label: M-1 forecaster
+      config: resources/inference/configs/forecaster_with_global.yaml
 
 baselines:
   - baseline:
