--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -49,12 +49,13 @@ rule showcase_all:
     input:
         expand(
             OUT_ROOT
-            / "showcases/{run_id}/{init_time}/{init_time}_{param}_{projection}_{region}.gif",
+            / "showcases/{run_id}/{init_time}/{init_time}_{param}_{projection}_{region}_{with_global}.gif",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_runs(),
             param="2t",
             projection="orthographic",
-            region="switzerland",
+            region="centraleurope",
+            with_global="true",
         ),
 
 
