--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -4,8 +4,8 @@ description: |
   (KENDA-1) at 1km resolution.
 
 dates:
-  start: 2020-01-01T12:00
-  end: 2020-01-10T00:00
+  start: 2024-01-01T12:00
+  end: 2024-01-10T00:00
   frequency: 54h
 
 lead_time: 120h
@@ -18,6 +18,8 @@ runs:
       inference_resources:
         gpu: 4
         tasks: 4
+      extra_dependencies:
+        - /users/omiralle/anemoi-inference
 
 baselines:
   - baseline:
