--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -19,7 +19,7 @@ runs:
         gpu: 4
         tasks: 4
       extra_dependencies:
-        - /users/omiralle/anemoi-inference
+        - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
 
 baselines:
   - baseline:
