Switch to GRIB and fix projection issues (#60)
* Adopt more atomic approach

Also use marimo for interactive editing

* Move notebook to dedicated folder

* add plot rule

* Revert some wrong changes

* Solve bugs adopt grib

* Replace by plot_forecast_frame.py

* Rename

* Fix number of points cosmo 1e

* Remove globe because it doesn't seem right

* Add possibility to set region to none for global plots

* Review

* Update workflow/scripts/src/plotting.py

* Simplify code

--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -4,8 +4,8 @@ description: |
   (KENDA-1) at 1km resolution.
 
 dates:
-  start: 2020-01-01T12:00
-  end: 2020-01-10T00:00
+  start: 2024-01-01T12:00
+  end: 2024-01-10T00:00
   frequency: 54h
 
 lead_time: 120h
@@ -14,10 +14,12 @@ runs:
   - forecaster:
       mlflow_id: 2174c939c8844555a52843b71219d425
       label: Cosmo 1km + era5 N320, finetuned on cerra checkpoint, lam resolution 11
-      config: resources/inference/configs/forecaster_no_trimedge_fromtraining.yaml
+      config: resources/inference/configs/forecaster_no_trimedge_with_global.yaml
       inference_resources:
         gpu: 4
         tasks: 4
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
 
 baselines:
   - baseline:
