--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "ipython>=9.6.0",
     "pre-commit>=4.2.0",
     "snakefmt>=0.11.0",
 ]
