Adopt 'steps' instead of 'lead_time'

--- a/config/forecasters.yaml
+++ b/config/forecasters.yaml
@@ -8,15 +8,15 @@ dates:
   # end: 2020-03-30T00:00
   frequency: 36h
 
-lead_time: 120h
-
 runs:
   - forecaster:
       mlflow_id: 2f962c89ff644ca7940072fa9cd088ec
       label: Stage D - N320 global grid with CERRA finetuning
+      steps: 0/126/6
   - forecaster:
       mlflow_id: d0846032fc7248a58b089cbe8fa4c511
       label: M-1 forecaster
+      steps: 0/126/6
 
 baselines:
   - baseline:
