--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -7,8 +7,6 @@ dates:
   end: 2020-01-10T00:00
   frequency: 54h
 
-lead_time: 120h
-
 runs:
   - interpolator:
       mlflow_id: 9c18b90074214d769b8b383722fc5a06
@@ -27,6 +25,7 @@ runs:
       forecaster:
         mlflow_id: d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/forecaster_with_global.yaml
+        steps: 0/126/6
       extra_dependencies:
         - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
         - torch-geometric==2.6.1
@@ -39,6 +38,7 @@ runs:
       forecaster:
         mlflow_id: d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/forecaster_with_global.yaml
+        steps: 0/126/6
       extra_dependencies:
         - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
         - torch-geometric==2.6.1
