--- a/resources/inference/configs/forecaster_with_global.yaml
+++ b/resources/inference/configs/forecaster_with_global.yaml
@@ -28,7 +28,7 @@ output:
           - extract_slice: [189699, -1]
           - assign_mask: "global/cutout_mask"
 
-forcings:
+constant_forcings:
   test:
     use_original_paths: true
 
