--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "pydantic>=2.11.7",
     "toml>=0.10.2",
     "netcdf4>=1.7.2",
+    "shapely>=2.1.2",
+    "cartopy>=0.25.0",
+    "pyproj>=3.7.2",
 ]
 
 [project.optional-dependencies]
