Plot wind speed
I'm assuming the default colormap is in knots

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -52,7 +52,7 @@ rule showcase_all:
             / "showcases/{run_id}/{init_time}/{init_time}_{param}_{projection}_{region}.gif",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_runs(),
-            param="2t",
+            param=["2t", "10sp"],
             projection="orthographic",
             region=["none", "switzerland"],
         ),
