--- a/config/showcase.yaml
+++ b/config/showcase.yaml
@@ -4,15 +4,23 @@ description: |
 
 dates:
   - 2020-02-03T00:00 # Storm Petra
-  - 2020-02-07T00:00 # Storm Sabine
-  - 2020-10-01T00:00 # Storm Brigitte
+ - 2020-02-07T00:00 # Storm Sabine
+ - 2020-10-01T00:00 # Storm Brigitte
 
 runs:
-  - forecaster:
-      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
-      label: M-1 forecaster
-      config: resources/inference/configs/forecaster_with_global.yaml
-      steps: 0/120/6
+  - interpolator:
+      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
+      label: M-2 interpolator
+      steps: 0/120/1
+      config: resources/inference/configs/interpolator_stretched.yaml
+      forecaster:
+        mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+        config: resources/inference/configs/forecaster_with_global.yaml
+        steps: 0/120/6
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference@14189907b4f4e3b204b7994f828831b8aa51e9b6
+        - torch-geometric==2.6.1
+        - anemoi-graphs==0.5.2
 
 baselines:
   - baseline:
