--- a/resources/inference/configs/interpolator_stretched_with_global.yaml
+++ b/resources/inference/configs/interpolator_stretched_with_global.yaml
@@ -1,68 +1,116 @@
-# yaml-language-server: $schema=../workflow/tools/config.schema.json
-description: |
-  Evaluate skill of SGM interpolator (M-2 interpolator).
+runner: time_interpolator
 
-dates:
-  start: 2020-01-01T12:00
-  end: 2020-01-10T00:00
-  frequency: 60h
+input:
+  cutout:
+    lam_0:
+      grib:
+        path: forecaster_grib/20*
+        pre_processors:
+          - extract_mask: "source0/trimedge_mask"
+        namer:
+          rules:
+            - - shortName: T
+              - t_{level}
+            - - shortName: U
+              - u_{level}
+            - - shortName: V
+              - v_{level}
+            - - shortName: W
+              - w_{level}
+            - - shortName: QV
+              - q_{level}
+            - - shortName: FI
+              - z_{level}
+            - - shortName: PMSL
+              - msl
+            - - shortName: FIS
+              - z
+            - - shortName: PS
+              - sp
+            - - shortName: T_2M
+              - 2t
+            - - shortName: TD_2M
+              - 2d
+            - - shortName: T_G
+              - skt
+            - - shortName: U_10M
+              - 10u
+            - - shortName: V_10M
+              - 10v
+            - - shortName: FR_LAND
+              - lsm
+            - - shortName: TOT_PREC
+              - tp
+    global:
+      grib:
+        path: forecaster_grib/ifs*
+        namer:
+          rules:
+            - - shortName: T
+              - t_{level}
+            - - shortName: U
+              - u_{level}
+            - - shortName: V
+              - v_{level}
+            - - shortName: W
+              - w_{level}
+            - - shortName: QV
+              - q_{level}
+            - - shortName: FI
+              - z_{level}
+            - - shortName: PMSL
+              - msl
+            - - shortName: FIS
+              - z
+            - - shortName: PS
+              - sp
+            - - shortName: T_2M
+              - 2t
+            - - shortName: TD_2M
+              - 2d
+            - - shortName: T_G
+              - skt
+            - - shortName: U_10M
+              - 10u
+            - - shortName: V_10M
+              - 10v
+            - - shortName: FR_LAND
+              - lsm
+            - - shortName: TOT_PREC
+              - tp
 
-runs:
-  - interpolator:
-      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
-      label: M-2 interpolator (KENDA)
-      steps: 0/120/1
-      config: resources/inference/configs/interpolator_from_test_data_stretched.yaml
-      forecaster: null
-      extra_dependencies:
-        - git+https://github.com/ecmwf/anemoi-inference@14189907b4f4e3b204b7994f828831b8aa51e9b6
-        - torch-geometric==2.6.1
-        - anemoi-graphs==0.5.2
-  - interpolator:
-      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
-      label: M-2 interpolator (M-1 forecaster)
-      steps: 0/120/1
-      config: resources/inference/configs/interpolator_stretched.yaml
-      forecaster:
-        mlflow_id: d0846032fc7248a58b089cbe8fa4c511
-        config: resources/inference/configs/forecaster_with_global.yaml
-        steps: 0/120/6
-      extra_dependencies:
-        - git+https://github.com/ecmwf/anemoi-inference@14189907b4f4e3b204b7994f828831b8aa51e9b6
-        - torch-geometric==2.6.1
-        - anemoi-graphs==0.5.2
-  - forecaster:
-      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
-      label: M-1 forecaster
-      config: resources/inference/configs/forecaster_with_global.yaml
-      steps: 0/120/6
+constant_forcings:
+  test:
+    use_original_paths: true
 
-baselines:
-  - baseline:
-      baseline_id: COSMO-E-1h
-      label: COSMO-E
-      root: /scratch/mch/bhendj/COSMO-E
-      steps: 0/120/1
+patch_metadata:
+  dataset:
+    constant_fields: [z, lsm]
 
-analysis:
-  label: COSMO KENDA
-  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-1h-v3-pl13.zarr
+output:
+  tee:
+    outputs:
+      - extract_lam:
+          output:
+            assign_mask:
+              mask: "source0/trimedge_mask"
+              output:
+                grib:
+                  path: grib/{dateTime}_{step:03}.grib
+                  encoding:
+                    typeOfGeneratingProcess: 2
+                  templates:
+                    samples: _resources/templates_index_cosmo.yaml
+      - grib:
+          path: grib/ifs-{dateTime}_{step:03}.grib
+          encoding:
+            typeOfGeneratingProcess: 2
+          templates:
+            samples: _resources/templates_index_ifs.yaml
+          post_processors:
+            - extract_slice: [189699, -1]
+            - assign_mask: "global/cutout_mask"
 
-locations:
-  output_root: output/
-  mlflow_uri:
-    # - https://service.meteoswiss.ch/mlstore
-    - https://servicedepl.meteoswiss.ch/mlstore
-    - https://mlflow.ecmwf.int
-
-profile:
-  executor: slurm
-  global_resources:
-    gpus: 16
-  default_resources:
-    slurm_partition: "postproc"
-    cpus_per_task: 1
-    mem_mb_per_cpu: 1800
-    runtime: "1h"
-    gpus: 0
-  jobs: 50
+verbosity: 1
+allow_nans: true
+output_frequency: "1h"
