Plot only candidate runs

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -51,7 +51,7 @@ rule showcase_all:
             OUT_ROOT
             / "showcases/{run_id}/{init_time}/{init_time}_{param}_{projection}_{region}.gif",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
-            run_id=collect_all_runs(),
+            run_id=collect_all_candidates(),
             param=["2t", "10sp"],
             projection="orthographic",
             region=["none", "switzerland"],
