Unify projections and regions in one object

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -49,12 +49,11 @@ rule showcase_all:
     input:
         expand(
             OUT_ROOT
-            / "showcases/{run_id}/{init_time}/{init_time}_{param}_{projection}_{region}.gif",
+            / "showcases/{run_id}/{init_time}/{init_time}_{param}_{region}.gif",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
             param=["2t", "10sp"],
-            projection="orthographic",
-            region=["none", "switzerland"],
+            region=["globe", "switzerland"],
         ),
 
 
