--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -53,7 +53,7 @@ rule showcase_all:
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
             param=["2t", "10sp"],
-            region=["globe", "switzerland"],
+            region=["globe", "europe", "switzerland"],
         ),
 
 
