--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -15,7 +15,7 @@ runs:
       config: resources/inference/configs/interpolator_from_test_data_stretched.yaml
       forecaster: null
       extra_dependencies:
-        - git+https://github.com/ecmwf/anemoi-inference@14189907b4f4e3b204b7994f828831b8aa51e9b6
+        - git+https://github.com/ecmwf/anemoi-inference@add-inverse-option-extract
         - torch-geometric==2.6.1
         - anemoi-graphs==0.5.2
   - interpolator:
@@ -28,7 +28,7 @@ runs:
         config: resources/inference/configs/forecaster_with_global.yaml
         steps: 0/120/6
       extra_dependencies:
-        - git+https://github.com/ecmwf/anemoi-inference@14189907b4f4e3b204b7994f828831b8aa51e9b6
+        - git+https://github.com/ecmwf/anemoi-inference@add-inverse-option-extract
         - torch-geometric==2.6.1
         - anemoi-graphs==0.5.2
   - forecaster:
@@ -36,6 +36,8 @@ runs:
       label: M-1 forecaster
       config: resources/inference/configs/forecaster_with_global.yaml
       steps: 0/120/6
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference@add-inverse-option-extract
 
 baselines:
   - baseline:
