--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "cartopy",
     "earthkit-plots",
     "marimo>=0.16.5",
+    "geopandas>=0.14.0",
 ]
 
 [project.optional-dependencies]
