MRB-422 Generate plots for inference output (#50)
* lock

* add cartopy

* generate raw

* add plot rule

* fix init_time

* adding plotting files

* adding plotting files

* generate colormaps from NCL color table files

* split colormap configs for variables and colormap loader

* add tests for colormap_loader.py and colormap_defaults.py

* revert change commited accidentally

* fix typo

* fix imports for code and tests to fit the project's structure

* adapt plotting to earthkit-plots

* improve tests

* Refactor plot rule and adopt marimo (#54)

* Adopt more atomic approach

Also use marimo for interactive editing

* Move notebook to dedicated folder

* Remove original script

* Add example config

* Revert some wrong changes

* Fix paths

* Revert using separate folder for notebooks

* Specify individual showcases dates

* Switch to GRIB and fix projection issues (#60)

* Adopt more atomic approach

Also use marimo for interactive editing

* Move notebook to dedicated folder

* add plot rule

* Revert some wrong changes

* Solve bugs adopt grib

* Replace by plot_forecast_frame.py

* Rename

* Fix number of points cosmo 1e

* Remove globe because it doesn't seem right

* Add possibility to set region to none for global plots

* Review

* Update workflow/scripts/src/plotting.py

* Simplify code

* Set path to eccodes defintions

* Add Switzerland region to outputs

* Batch plot jobs in larger submissions

* Fix pre-commits

* Revert change in co1e config

* Parse steps

* Do not hardcode leadtimes

* Plot wind speed

I'm assuming the default colormap is in knots

* Showcase M-2 model

* Fix pre-commit

* Add global outputs to interpolator showcase

* Fix wrong inference config...

* Plot only candidate runs

* Add units to comment

* Revert changes to inference config

* Unify projections and regions in one object

* Remove debugging code...

* Add europe region to outputs

* Use modified colormap for wind

* Reduce figure size and quality

* Fix inputs to plot

--- a/config/showcase.yaml
+++ b/config/showcase.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../workflow/tools/config.schema.json
 description: |
-  Evaluate skill of COSMO-E emulator (M-1 forecaster).
+  Basic config for showcasing M-2 interpolator on M-1 forecaster.
 
 dates:
   - 2020-02-03T00:00 # Storm Petra
@@ -8,13 +8,21 @@ dates:
   - 2020-10-01T00:00 # Storm Brigitte
 
 runs:
-  - forecaster:
-      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
-      label: M-1 forecaster
-      steps: 0/120/6
-      config: resources/inference/configs/forecaster_with_global.yaml
+  - interpolator:
+      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
+      label: M-2 interpolator
+      steps: 0/120/1
+      config: resources/inference/configs/interpolator_stretched_with_global.yaml
+      forecaster:
+        mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+        config: resources/inference/configs/forecaster_with_global.yaml
+        steps: 0/120/6
+        extra_dependencies:
+          - git+https://github.com/ecmwf/anemoi-inference.git@main
       extra_dependencies:
         - git+https://github.com/ecmwf/anemoi-inference.git@main
+        - torch-geometric==2.6.1
+        - anemoi-graphs==0.5.2
 
 baselines:
   - baseline:
@@ -22,10 +30,6 @@ baselines:
       label: COSMO-E
       root: /store_new/mch/msopr/ml/COSMO-E
       steps: 0/120/6
-
-analysis:
-  label: COSMO KENDA
-  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
 
 stratification:
   regions:
@@ -37,6 +41,10 @@ stratification:
     - alpensuedseite
   root: /scratch/mch/bhendj/regions/Prognoseregionen_LV95_20220517
 
+analysis:
+  label: COSMO KENDA
+  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
+
 locations:
   output_root: output/
   mlflow_uri:
@@ -46,7 +54,7 @@ locations:
 profile:
   executor: slurm
   global_resources:
-    gpus: 16
+    gpus: 15
   default_resources:
     slurm_partition: "postproc"
     cpus_per_task: 1
@@ -54,3 +62,5 @@ profile:
     runtime: "1h"
     gpus: 0
   jobs: 50
+  batch_rules:
+    plot_forecast_frame: 32
