--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -4,19 +4,21 @@ description: |
   (KENDA-1) at 1km resolution.
 
 dates:
-  start: 2020-08-01T12:00
-  end: 2020-08-10T00:00
+  start: 2024-01-01T12:00
+  end: 2024-01-10T00:00
   frequency: 54h
 
 runs:
   - forecaster:
       mlflow_id: 2174c939c8844555a52843b71219d425
       label: Cosmo 1km + era5 N320, finetuned on cerra checkpoint, lam resolution 11
-      config: resources/inference/configs/forecaster_no_trimedge_fromtraining.yaml
+      config: resources/inference/configs/forecaster_no_trimedge_with_global.yaml
       steps: 0/120/6
       inference_resources:
         gpu: 4
         tasks: 4
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference.git@main
 
 baselines:
   - baseline:
