--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -59,7 +59,7 @@ rule showcase_all:
             OUT_ROOT / "showcases/{run_id}/{init_time}/{init_time}_{param}_{sta}.png",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
-            param=["2t"],
+            param=["T_2M"],
             sta=["GVE", "KLO", "LUG"],
         ),
 
