--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -86,6 +86,7 @@ rule verif_metrics_plot_all:
             experiment=EXPERIMENT_HASH,
         ),
 
+# To run:  snakemake --cores 1 --configfile=config/recasters.yaml verif_obs_all
 rule verif_obs_all:
     input:
         expand(
