Remove redundancy in verification scripts (#81)
* add separate module for data input
* consolidated verification script for baselines and forecasts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,5 +55,6 @@ markers = [
 [tool.hatch.build.targets.wheel]
 packages = [
   "src/evalml",
-  "src/verification"
+  "src/verification",
+  "src/data_input"
 ]
