--- a/resources/inference/configs/sgm-forecaster-regional_fromtraining.yaml
+++ b/resources/inference/configs/sgm-forecaster-regional_fromtraining.yaml
@@ -1,12 +1,9 @@
-runner: time_interpolator
-
 input:
-  test:
+  training:
     use_original_paths: true
 
-post_processors:
-  - assign_mask:
-      mask: "trimedge_mask"
+allow_nans: true
+
 
 output:
   grib:
@@ -15,7 +12,9 @@ output:
       typeOfGeneratingProcess: 2
     templates:
       samples: resources/templates_index_cosmo.yaml
+    post_processors:
+      - extract_mask: # removes global points
+          mask: "source0/cutout_mask"
+          as_slice: true
 
-verbosity: 1
-allow_nans: true
-output_frequency: "1h"
+write_initial_state: true
