--- a/resources/inference/configs/sgm-interpolator-global_trimedge.yaml
+++ b/resources/inference/configs/sgm-interpolator-global_trimedge.yaml
@@ -4,10 +4,10 @@ input:
   cutout:
     - lam_0:
         grib:
+          path: forecaster/20*
           pre_processors:
             - extract_mask: "source0/trimedge_mask"
-          path: forecaster/20*
-          namer:
+          namer: &namer
             rules:
               - - shortName: T
                 - t_{level}
@@ -44,40 +44,7 @@ input:
     - global:
         grib:
           path: forecaster/ifs*
-          namer:
-            rules:
-              - - shortName: T
-                - t_{level}
-              - - shortName: U
-                - u_{level}
-              - - shortName: V
-                - v_{level}
-              - - shortName: W
-                - w_{level}
-              - - shortName: QV
-                - q_{level}
-              - - shortName: FI
-                - z_{level}
-              - - shortName: PMSL
-                - msl
-              - - shortName: FIS
-                - z
-              - - shortName: PS
-                - sp
-              - - shortName: T_2M
-                - 2t
-              - - shortName: TD_2M
-                - 2d
-              - - shortName: T_G
-                - skt
-              - - shortName: U_10M
-                - 10u
-              - - shortName: V_10M
-                - 10v
-              - - shortName: FR_LAND
-                - lsm
-              - - shortName: TOT_PREC
-                - tp
+          namer: *namer
 
 constant_forcings:
   test:
@@ -89,18 +56,32 @@ patch_metadata:
 
 output:
   tee:
-    outputs:
-      - extract_lam:
-          output:
-            assign_mask:
+    - grib:
+        path: grib/{dateTime}_{step:03}.grib
+        encoding:
+          typeOfGeneratingProcess: 2
+        templates:
+            samples: resources/templates_index_cosmo.yaml
+        post_processors:
+          - extract_mask: # removes global points
+              mask: "lam_0/cutout_mask"
+              as_slice: true
+          - assign_mask:  # fill boundary "trimmed" points with nan
               mask: "source0/trimedge_mask"
-              output:
-                grib:
-                  path: grib/{dateTime}_{step:03}.grib
-                  encoding:
-                    typeOfGeneratingProcess: 2
-                  templates:
-                    samples: resources/templates_index_cosmo.yaml
+
+    - grib:
+        path: grib/ifs-{dateTime}_{step:03}.grib
+        encoding:
+          typeOfGeneratingProcess: 2
+        templates:
+          samples: resources/templates_index_ifs.yaml
+        post_processors:
+          - extract_mask: # removes lam points
+              mask: "lam_0/cutout_mask"
+              as_slice: true
+              inverse: true
+          - assign_mask: # fill local/global overlapping points with nan
+              mask: "global/cutout_mask"
 
 verbosity: 1
 allow_nans: true
